@@ -33,6 +33,7 @@
             extends="runtime"
             description="artifacts needed to compile/test the application"/>
         <conf name="test" visibility="private" extends="runtime"/>
+        <conf name="releaseaudit" visibility="private"/>
     </configurations>
     <dependencies>
         <dependency org="org.apache.pig" name="pig" rev="${pig.version}"
@@ -44,7 +45,8 @@
           conf="common->master"/>
           -->
         <dependency org="javax.jms" name="jms" rev="${jms.version}" conf="common->master" />
- <dependency org="org.apache.activemq" name="activemq-core" rev="${activemq.version}" conf="common->master" />
-<dependency org="javax.management.j2ee" name="management-api" rev="${javax-mgmt.version}" conf="common->master" /> 
+        <dependency org="org.apache.activemq" name="activemq-core" rev="${activemq.version}" conf="common->master" />
+        <dependency org="javax.management.j2ee" name="management-api" rev="${javax-mgmt.version}" conf="common->master" /> 
+        <dependency org="com.google.code.p.arat" name="rat-lib" rev="${rats-lib.version}" conf="releaseaudit->default"/>
 </dependencies>
 </ivy-module>
