@@ -21,3 +21,4 @@ commons-cli.version=1.0
 jms.version=1.1
 activemq.version=5.5.0
 javax-mgmt.version=1.1-rev-1
+rats-lib.version=0.5.1
